# System_Integration_2023

./: .gitignore
00._Miscellaneous/: getgooglehomepage.sh  index.html  stripeIFrame.html
01._modules/html_module/: index.js  myModule.js
01._modules/html_no_module/: index.html  index.js
01._modules/node_commonjs/: index.js  myModule.js
01._modules/node_esmodules/: index.js  myModule.js
01._modules/python/: main.py
02._data_formtas/: me.csv  me.json  me.txt  me.xml  me.yaml
02._data_formtas/encode-decode/: index.js
03._python_environments/testpotery/: pyproject.toml
04._basic_servers/node/: app.js
04._basic_servers/python/: main.py  pyproject.toml
05._date/node/: index.js
05._date/python/: main.py
06._server_to_server/homework/python/: main.py  pyproject.toml
06._server_to_server/node/: app.js
06._server_to_server/python/: main.py  pyproject.toml
07._dotenv/node/: index.js  package.json
07._dotenv/python/: main.py  pyproject.toml
08._database_documentation/: about.md
08._database_documentation/backup/: sampleDatabase.sql  test.sql
08._database_documentation/documentation/: customers.json  customers_mro_docs.html
09._OpenAPI/homework/: app.js  package-lock.json  package.json
09._OpenAPI/java/: SwaggerConfig.java  about.md
09._OpenAPI/node/: app.js  package-lock.json  package.json
09._OpenAPI/python/: main.py  openapi.json  pyproject.toml
101._Mandatories/Mandatory_2/: app.js  package-lock.json  package.json
101._Mandatories/Web_scraping_Mandatory_2_Part_2/: index.html  index.js  package-lock.json  package.json
102._sms_service/: app.js  package-lock.json  package.json
102._sms_service/public/: index.html
12._sever-sent_events/node/: app.js
12._sever-sent_events/python/: main.py  pyproject.toml
13._github_webhooks/node/: app.js
13._github_webhooks/python/: main.py  pyproject.toml
13._github_webhooks/ruby/: app.rb
14._azure_functions/: requirements.txt
14._azure_functions/PythonHttpTriger/: __init__.py
15._websockets/node/: client.js  index.html  package-lock.json  package.json  server.js
15._websockets/python/: connection_manager.py  main.py  pyproject.toml
16._CORS/: index.html
16._CORS/node/: app.js  package.json
16._CORS/python/: main.py  pyproject.toml
17._multipart-forms/: index.html
17._multipart-forms/my_example/: index.html
17._multipart-forms/node/: app.js  package.json
17._multipart-forms/school/python/: main.py  pyproject.toml
18._base64_encoded_images/: index.html  youtubevideoembed.html
19._redis/my_example/: package.json
19._redis/node/: index.js  package-lock.json
19._redis/python/basic-example/: main.py  pyproject.toml
19._redis/python/task_queues/: pyproject.toml  scheduler.py  worker.py
20._web_scarper/node/: index.html  index.js  package.json
20._web_scarper/python/: about.txt
20._web_scarper/python/1._data_scraper/: data_scraper.py  pyproject.toml
20._web_scarper/python/2._web_crawler/: pyproject.toml  web_crawler.py
20._web_scarper/python/3._Scrapy_basic/: pyproject.toml
21._graphql/my_example/: index.js  package-lock.json  package.json  resolvers.js  schema.graphql
21._graphql/node/: index.js  package-lock.json  package.json  (+1 more)
(+71 files in other folders)
